src/objects/ffbc__DefaultDocumentText__c.object
<CustomObject>
    <customHelpPage>ffbc__defaultdocumenttexthelp</customHelpPage>
    <description>Contains the default header and footer text for billing documents.</description>
    <fields>
        <fullName>ffbc__CreditNoteFooterText__c</fullName>
        <description>Default text to be shown at the end of printed billing documents of type Credit Note.</description>
        <inlineHelpText>Default text to be shown at the end of printed billing documents of type Credit Note.</inlineHelpText>
        <label>Credit Note Footer</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ffbc__CreditNoteHeaderText__c</fullName>
        <description>Default text to be shown at the start of printed billing documents of type Credit Note.</description>
        <inlineHelpText>Default text to be shown at the start of printed billing documents of type Credit Note.</inlineHelpText>
        <label>Credit Note Header</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ffbc__InvoiceFooterText__c</fullName>
        <description>Default text to be shown at the end of printed billing documents of type Invoice.</description>
        <inlineHelpText>Default text to be shown at the end of printed billing documents of type Invoice.</inlineHelpText>
        <label>Invoice Footer</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ffbc__InvoiceHeaderText__c</fullName>
        <description>Default text to be shown at the start of printed billing documents of type Invoice.</description>
        <inlineHelpText>Default text to be shown at the start of printed billing documents of type Invoice.</inlineHelpText>
        <label>Invoice Header</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Default Document Text</label>
    <listViews>
        <fullName>ffbc__All</fullName>
        <columns>NAME</columns>
        <columns>ffbc__InvoiceHeaderText__c</columns>
        <columns>ffbc__InvoiceFooterText__c</columns>
        <columns>ffbc__CreditNoteHeaderText__c</columns>
        <columns>ffbc__CreditNoteFooterText__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DDT{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Document Text</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>